# vector_ev_docs

./: .env.example  .gitignore  README.md  conversation_manager.py  conversations.db  db.py  evaluator.py  main.py  pyproject.toml  requirements.txt  run.sh  telemetry.py
webapp/: .env.example  README.md  __init__.py  backend.py  frontend.py  requirements.txt  run.sh
